# cookiecutter_kingsway

./: README.md  cookiecutter.json
.github/: dependabot.yml
{{ cookiecutter.project_slug }}/: Dockerfile-django  docker-compose.old.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  setup.cfg  xx_pyproject.toml
{{ cookiecutter.project_slug }}/.github/: dependabot.yml
{{ cookiecutter.project_slug }}/.github/workflows/: codeql.yml
{{ cookiecutter.project_slug }}/apps/authentication/: apps.py
{{ cookiecutter.project_slug }}/apps/emails/: models.py
{{ cookiecutter.project_slug }}/apps/errors/: services.py
{{ cookiecutter.project_slug }}/apps/files/: admin.py  apis.py  models.py  services.py
{{ cookiecutter.project_slug }}/apps/integrations/: apps.py
{{ cookiecutter.project_slug }}/apps/testing_examples/: admin.py
{{ cookiecutter.project_slug }}/apps/users/: filters.py
{{ cookiecutter.project_slug }}/config/: .env.template  asgi.py  celery.py  urls.py  wsgi.py
{{ cookiecutter.project_slug }}/config/django/: base.py
{{ cookiecutter.project_slug }}/config/settings/: celery_settings.py  email_sending.py  files_and_storages.py  jwt.py
{{ cookiecutter.project_slug }}/docker/: ci.sh  docker-compose.prod.yml
{{ cookiecutter.project_slug }}/docker/caddy/: Caddyfile
{{ cookiecutter.project_slug }}/docker/django/: Dockerfile  flower-entrypoint.sh  gunicorn.sh  scheduler-entrypoint.sh  web-entrypoint.old.sh  web-entrypoint.sh  worker-entrypoint.sh
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: settings.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/api/: apps.py  exception_handlers.py  urls.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/authentication/: apis.py  services.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/common/: apps.py  services.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/core/: apps.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/emails/: admin.py  apps.py  services.py  tasks.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/errors/: apis.py  apps.py
(+27 files in other folders)
