[tool.poetry]
name = "ppp"
version = "0.1.0"
description = "lorem Ipsum ergo vidi"
authors = ["emmanuelokoye <tricelex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

# Django
Django = "^4.0.4"
django-environ = "0.9.0"


# Celery
celery = "^5.2.2"
django-celery-beat = "^2.3.0"
django-celery-results = "^2.2.0"
pytz = "^2021.3"

# DRF
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^4.8.0"


# Prod
gunicorn = "^20.1.0"
sentry-sdk = "^1.9.8"

# Misc
django-filter ="^22.1"
django-extensions = "^3.2.1"
django-cors-headers = "^3.13.0"
django-redis = "^5.0.0"
django-storages = "^1.12.2"

boto3 = "^1.20.10"
attrs = "^21.2.0"

# Considers
# django-axes ="^5.36"
# django-health-check = "^3.16"

psycopg2-binary = "^2.9"
python-decouple = "^3.6"
structlog = "^22.1"

[tool.poetry.dev-dependencies]
# Testing
pytest = "^6.2.5"
pytest-django = "^4.4.0"

factory-boy = "^3.2.0"
# pytest-factoryboy = "^3.0.0"
Faker = "^8.16.0"

# Linting
flake8 = "^4.0.1"

# Code Quality

# Coverage

# Docs

# Misc
ipdb = "^0.13.9"
ipython = "^7.29.0"

# Database

# Type Checking
mypy = "^0.910"
django-stubs = "^1.9.0"
djangorestframework-stubs = "^1.3.0"
boto3-stubs = "^1.20.0"


# Security

# Deployment

# CI/CD

# Debugging

# Considers
django-debug-toolbar = "^3.5"
django-querycount = "^0.7"
django-migration-linter = "^4.1"
django-extra-checks = "^0.11"
django-coverage-plugin = "^2.0"
nplusone = "^1.0"

wemake-python-styleguide = "^0.16"
flake8-pytest-style = "^1.6"
flake8-django = "^1.1"
flake8-logging-format = "^0.6"
nitpick = "^0.32"
doc8 = "^0.11"

pytest-cov = "^3.0"
pytest-randomly = "^3.12"
pytest-deadfixtures = "^2.2"
pytest-timeout = "^2.1"
django-test-migrations = "^1.2"
hypothesis = "^6.53"


yamllint = "^1.27"
safety = "^2.1"
dotenv-linter = "^0.3"
polint = "^0.4"
dennis = "^1.1"
dump-env = "^1.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/0.16.1/styles/nitpick-style-wemake.toml"
